--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             console.info('Dropped necessary cookies')
           }
         },
+        acceptLabel: 'Accept cookies',
+        settingsLabel: 'Manage preferences',
+        closeLabel: 'Save preferences',
+        acceptAllLabel: 'Tutti quanti',
         choices: {
           necessary: {
             label: 'Necessary Things',
